# bento-box

./: .clang-format  .codespellrc  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  makefile
.github/workflows/: cd-master.yaml  cd-release.yaml  cd.yaml  ci.yaml
bento-box/: CMakeLists.txt
bento-box/lib/: glad.c
docs/: client.html  index.html  sim.html  types.html  utils.html  value.html
docs/ecs/: base.html  graph.html  grpc.html  index.html  spec.html
docs/example/: index.html  mountcar.html  specs.html
docs/graph/: analyzers.html  ast.html  compile.html  ecs.html  index.html  linters.html  plotter.html  preprocessors.html  spec.html  transforms.html  value.html
docs/protos/: ecs_pb2.html  ecs_pb2_grpc.html  graph_pb2.html  graph_pb2_grpc.html  index.html  references_pb2.html  references_pb2_grpc.html  services_pb2.html  services_pb2_grpc.html  sim_pb2.html  sim_pb2_grpc.html  types_pb2.html  types_pb2_grpc.html  values_pb2.html  values_pb2_grpc.html
docs/spec/: ecs.html  graph.html  index.html  sim.html
e2e/: conftest.py  requirements-e2e.txt  test_e2e.py  test_mountcar.py
infra/docker/sdk/: Dockerfile
infra/docker/sim/: Dockerfile
infra/k8s/engine/: deployment.yaml  ingress.yaml
infra/kustomize/engine/: deployment.yaml  kustomization.yaml  service.yaml
protos/: ecs.proto  graph.proto  references.proto  services.proto  sim.proto  test.proto  types.proto  values.proto
protos/bento/protos/: ecs.proto  graph.proto  references.proto  services.proto  sim.proto  types.proto  values.proto
sdk/: mypy.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
sdk/bento/: __init__.py  client.py  sim.py  types.py  utils.py  value.py
sdk/bento/ecs/: __init__.py  base.py  graph.py  grpc.py  spec.py
sdk/bento/example/: mountcar.py  specs.py
sdk/bento/graph/: __init__.py  analyzers.py  ast.py  compile.py  ecs.py  linters.py  plotter.py  spec.py  transforms.py
sdk/bento/spec/: ecs.py  graph.py  sim.py
sdk/tests/: components.py  specs.py  test_bento.py  test_client.py  test_sim.py  test_value.py  utils.py
sdk/tests/ecs/: test_graph.py  test_grpc.py
sdk/tests/graph/: test_analyzers.py  test_compile.py  test_ecs.py  test_graph.py  test_linters.py  test_plotter.py  test_preprocessors.py  test_transforms.py
sdk/tests/graph/resources/: expected_graph_arithmetic.yaml  expected_graph_arithmetic_multiple.yaml  expected_graph_ifelse.yaml  expected_graph_ternary.yaml
sim/: CMakeLists.txt  dependencies.cmake
sim/cmake/: GetGitRevisionDescription.cmake
sim/include/: git.h.in  graphInterpreter.h  ics.h  simulation.h  userValue.h
sim/include/component/: componentStoreExt.h  components.h  pos1DComponent.h  pos2DComponent.h  textureComponent.h  userComponent.h
sim/include/index/: componentType.h  componentTypeIndex.h  entity.h  entityIndex.h  indexStore.h
sim/include/interpreter/: graphInterpreter.h  operations.h  userValue.h  util.h
sim/include/network/: grpcServer.h
sim/include/proto/: userValue.h  valueType.h
sim/include/service/: EngineServiceImpl.h  engineService.h
sim/include/system/: render.h
sim/lib/core/: CMakeLists.txt
sim/lib/core/include/core/: graphicsContext.h  systemContext.h  windowContext.h
sim/lib/core/include/core/ics/: compVec.h  component.h  componentManager.h  componentSet.h  componentStore.h  indexStore.h
sim/lib/core/include/core/ics/util/: composable.h  setIntersection.h  typeMap.h
sim/lib/core/include/core/optics/: lens.h  lens.hpp
sim/lib/core/lib/glad/include/glad/: glad.h
sim/lib/core/lib/stb_image/: stb_image.h
sim/lib/core/src/: graphicsContext.cpp  systemContext.cpp  systemContext.test.cpp  windowContext.cpp
sim/lib/core/src/ics/: compVec.test.cpp  component.test.cpp  componentManager.test.cpp  componentStore.cpp  componentStore.test.cpp  index.test.cpp
sim/lib/core/src/ics/util/: composable.test.cpp  setIntersection.test.cpp  typeMap.test.cpp
sim/lib/core/src/optics/: lens.test.cpp
sim/lib/googletest/googlemock/: Makefile  cmake_install.cmake
sim/src/: GraphicsContext.cpp  GraphicsContext.h  ICSManager.h  Manager.h  WindowContext.cpp  WindowContext.h  componentManager.h  componentManager.test.cpp  graphInterpreter.cpp  graphInterpreter.test.cpp  ics.cpp  main.cpp  main.test.cpp  test_simulation.cpp  userValue.cpp
sim/src/component/: componentStoreExt.h  pos1DComponent.cpp  pos2DComponent.cpp  textureComponent.cpp  userComponent.cpp  userComponent.test.cpp
sim/src/core/: CMakeLists.txt  graphicsContext.cpp  graphicsContext.h  windowContext.cpp
sim/src/core/ics/: CMakeLists.txt  compVec.h  compVec.test.cpp  component.h  componentManager.test.cpp  componentSet.h  componentStore.h  index.h  index.test.cpp
sim/src/core/ics/util/: CMakeLists.txt  typeMap.test.cpp
sim/src/ics/: CMakeLists.txt  compVec.cpp  compVec.h  compVec.test.cpp  component.h  component.test.cpp  index.h  index.test.cpp
sim/src/index/: componentType.h  componentType.test.cpp  componentTypeIndex.cpp  componentTypeIndex.test.cpp  entity.test.cpp  entityIndex.cpp
sim/src/interpreter/: graphInterpreter.cpp  graphInterpreter.test.cpp  operations.cpp  userValue.cpp  userValue.test.cpp  util.cpp  util.test.cpp
sim/src/network/: grpcServer.cpp  grpcServer.test.cpp
sim/src/proto/: userValue.cpp  userValue.test.cpp  valueType.cpp
sim/src/service/: EngineServiceImpl.cpp  engineService.cpp  engineService.test.cpp
sim/src/system/: render.cpp  render.h
sim/src/util/: CMakeLists.txt  typeMap.h  typeMap.test.cpp
sim/test_include/: test_simulation.h
