#
# Bentobox
# SDK
# Setuptools/PBR config
#

[metadata]
name = bentobox
author = The Bentobox Authors
author_email=mrzzy.dev@gmail.com
summary = SDK for Bentobox
home-page = https://github.com/joeltio/bento-box
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Bug Tracker = https://github.com/joeltio/bento-box
    Documentation = https://github.com/joeltio/bento-box
    Source Code = https://github.com/joeltio/bento-box
license = MIT
classifier =
    License :: OSI Approved :: MIT
    Programming Language :: Python

[files]
packages = 
    bento

[global]
commands = 
    setup.ProtoBuildPy
    setup.GenProtos
